// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Poll Block should render AlreadyVoted 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 16px;
}

.emotion-2 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-2 {
    font-size: 32px;
  }
}

.emotion-5 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-5.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-5:last-child {
  margin-bottom: 0;
}

.emotion-6 {
  display: grid;
  gap: 12px;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.4;
  text-transform: uppercase;
  min-width: 64px;
  padding: 5px 15px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border: 1px solid rgba(233, 30, 99, 0.5);
  color: #e91e63;
  border-radius: 30px;
  text-transform: initial;
  box-shadow: none;
}

.emotion-8::-moz-focus-inner {
  border-style: none;
}

.emotion-8.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-8 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(233, 30, 99, 0.04);
  border: 1px solid #e91e63;
}

@media (hover: none) {
  .emotion-8:hover {
    background-color: transparent;
  }
}

.emotion-8.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
  border: 1px solid rgba(0, 0, 0, 0.12);
}

.emotion-8:hover {
  box-shadow: none;
}

.emotion-9 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-12 {
  font-size: 0.875em;
  color: rgba(0, 0, 0, 0.38);
}

<article
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 emotion-2"
    >
      Question
    </h1>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-5"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary emotion-8"
        tabindex="0"
        type="button"
      >
        Ja
        <span
          class="MuiTouchRipple-root emotion-9"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary emotion-8"
        tabindex="0"
        type="button"
      >
        Nein
        <span
          class="MuiTouchRipple-root emotion-9"
        />
      </button>
    </div>
    <div
      class="emotion-12 emotion-13"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render AnonymousAlreadyVoted 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 16px;
}

.emotion-2 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-2 {
    font-size: 32px;
  }
}

.emotion-5 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-5.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-5:last-child {
  margin-bottom: 0;
}

.emotion-6 {
  display: grid;
  gap: 16px;
}

.emotion-8 {
  display: grid;
  gap: 4px;
}

.emotion-10 {
  display: grid;
  gap: 8px;
  grid-template-columns: 1fr max-content;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0 8px;
}

.emotion-12 {
  font-weight: 500;
}

.emotion-14 {
  font-weight: 500;
}

.emotion-16 {
  position: relative;
  font-size: 0.75em;
  padding: 4px 8px;
  position: relative;
  background-color: #eeeeee;
}

.emotion-18 {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background-color: #e0e0e0;
  z-index: 0;
  pointer-events: none;
  width: 52.38095238095239%;
}

.emotion-20 {
  position: relative;
  color: rgba(0, 0, 0, 0.87);
}

.emotion-32 {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background-color: #e0e0e0;
  z-index: 0;
  pointer-events: none;
  background-color: #e91e63;
  width: 47.61904761904761%;
}

.emotion-34 {
  position: relative;
  color: rgba(0, 0, 0, 0.87);
  color: #fff;
}

.emotion-36 {
  font-size: 0.875em;
  color: rgba(0, 0, 0, 0.38);
}

<article
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 emotion-2"
    >
      Question
    </h1>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-5"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Ja
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            52%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-18 emotion-19"
          />
          <div
            class="emotion-20 emotion-21"
          >
            11 Stimmen
          </div>
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Nein
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            48%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-32 emotion-19"
          />
          <div
            class="emotion-34 emotion-21"
          >
            10 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-36 emotion-37"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render AnonymousVoting 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 16px;
}

.emotion-2 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-2 {
    font-size: 32px;
  }
}

.emotion-5 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-5.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-5:last-child {
  margin-bottom: 0;
}

.emotion-6 {
  display: grid;
  gap: 12px;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.4;
  text-transform: uppercase;
  min-width: 64px;
  padding: 5px 15px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border: 1px solid rgba(233, 30, 99, 0.5);
  color: #e91e63;
  border-radius: 30px;
  text-transform: initial;
  box-shadow: none;
}

.emotion-8::-moz-focus-inner {
  border-style: none;
}

.emotion-8.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-8 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(233, 30, 99, 0.04);
  border: 1px solid #e91e63;
}

@media (hover: none) {
  .emotion-8:hover {
    background-color: transparent;
  }
}

.emotion-8.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
  border: 1px solid rgba(0, 0, 0, 0.12);
}

.emotion-8:hover {
  box-shadow: none;
}

.emotion-9 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-12 {
  font-size: 0.875em;
  color: rgba(0, 0, 0, 0.38);
}

<article
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 emotion-2"
    >
      Question
    </h1>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-5"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary emotion-8"
        tabindex="0"
        type="button"
      >
        Ja
        <span
          class="MuiTouchRipple-root emotion-9"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary emotion-8"
        tabindex="0"
        type="button"
      >
        Nein
        <span
          class="MuiTouchRipple-root emotion-9"
        />
      </button>
    </div>
    <div
      class="emotion-12 emotion-13"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render AnonymousVotingPlay 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -31,37 +31,77 @@
            </span>
          </p>
        </div>
      </div>
      <div
-       class="css-1e4oizq-PollBlockVoting ecm33wf2"
+       class="css-h8emd-PollBlockVoteResultList ecm33wf1"
      >
-       <button
-         class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-kctgaw-MuiButtonBase-root-MuiButton-root"
-         tabindex="0"
-         type="button"
+       <div
+         class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
+       >
+         <div
+           class="css-1cngs3v-PollBlockResultInfo e1v5g0xr5"
+         >
+           <div
+             class="css-115xnt3-PollBlockResultName e1v5g0xr4"
            >
              Ja
-         <span
-           class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           </div>
+           <div
+             class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
+           >
+             55%
+           </div>
+         </div>
+         <div
+           class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
+         >
+           <div
+             class="css-6pz6b3-PollBlockVoteBarFill e1v5g0xr1"
            />
-       </button>
-       <button
-         class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-kctgaw-MuiButtonBase-root-MuiButton-root"
-         tabindex="0"
-         type="button"
+           <div
+             class="css-1kbfvnx-PollBlockVoteBarText e1v5g0xr0"
+           >
+             12 Stimmen
+           </div>
+         </div>
+       </div>
+       <div
+         class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
+       >
+         <div
+           class="css-1cngs3v-PollBlockResultInfo e1v5g0xr5"
          >
+           <div
+             class="css-115xnt3-PollBlockResultName e1v5g0xr4"
+           >
              Nein
-         <span
-           class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           </div>
+           <div
+             class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
+           >
+             45%
+           </div>
+         </div>
+         <div
+           class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
+         >
+           <div
+             class="css-1cibdzq-PollBlockVoteBarFill e1v5g0xr1"
            />
-       </button>
+           <div
+             class="css-q7kpoh-PollBlockVoteBarText e1v5g0xr0"
+           >
+             10 Stimmen
+           </div>
+         </div>
        </div>
+     </div>
      <div
        class="css-nh52ap-PollBlockMeta ecm33wf0"
      >
-       21 Stimmen – Schliesst am 
+       22 Stimmen – Schliesst am 
        <time
          datetime="2033-01-01"
        >
          01.01.2033 00:00
        </time>"
`;

exports[`Poll Block should render Default 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 16px;
}

.emotion-2 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-2 {
    font-size: 32px;
  }
}

.emotion-5 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-5.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-5:last-child {
  margin-bottom: 0;
}

.emotion-6 {
  display: grid;
  gap: 16px;
}

.emotion-8 {
  display: grid;
  gap: 4px;
}

.emotion-10 {
  display: grid;
  gap: 8px;
  grid-template-columns: 1fr max-content;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0 8px;
}

.emotion-12 {
  font-weight: 500;
}

.emotion-14 {
  font-weight: 500;
}

.emotion-16 {
  position: relative;
  font-size: 0.75em;
  padding: 4px 8px;
  position: relative;
  background-color: #eeeeee;
}

.emotion-18 {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background-color: #e0e0e0;
  z-index: 0;
  pointer-events: none;
  background-color: #e91e63;
  width: 52.38095238095239%;
}

.emotion-20 {
  position: relative;
  color: rgba(0, 0, 0, 0.87);
  color: #fff;
}

.emotion-32 {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background-color: #e0e0e0;
  z-index: 0;
  pointer-events: none;
  width: 47.61904761904761%;
}

.emotion-34 {
  position: relative;
  color: rgba(0, 0, 0, 0.87);
}

.emotion-36 {
  font-size: 0.875em;
  color: rgba(0, 0, 0, 0.38);
}

<article
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 emotion-2"
    >
      Question
    </h1>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-5"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Ja
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            52%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-18 emotion-19"
          />
          <div
            class="emotion-20 emotion-21"
          >
            11 Stimmen
          </div>
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Nein
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            48%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-32 emotion-19"
          />
          <div
            class="emotion-34 emotion-21"
          >
            10 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-36 emotion-37"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render Voting 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 16px;
}

.emotion-2 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-2 {
    font-size: 32px;
  }
}

.emotion-5 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-5.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-5:last-child {
  margin-bottom: 0;
}

.emotion-6 {
  display: grid;
  gap: 12px;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.4;
  text-transform: uppercase;
  min-width: 64px;
  padding: 5px 15px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border: 1px solid rgba(233, 30, 99, 0.5);
  color: #e91e63;
  border-radius: 30px;
  text-transform: initial;
  box-shadow: none;
}

.emotion-8::-moz-focus-inner {
  border-style: none;
}

.emotion-8.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-8 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(233, 30, 99, 0.04);
  border: 1px solid #e91e63;
}

@media (hover: none) {
  .emotion-8:hover {
    background-color: transparent;
  }
}

.emotion-8.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
  border: 1px solid rgba(0, 0, 0, 0.12);
}

.emotion-8:hover {
  box-shadow: none;
}

.emotion-9 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-12 {
  font-size: 0.875em;
  color: rgba(0, 0, 0, 0.38);
}

<article
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 emotion-2"
    >
      Question
    </h1>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-5"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary emotion-8"
        tabindex="0"
        type="button"
      >
        Ja
        <span
          class="MuiTouchRipple-root emotion-9"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary emotion-8"
        tabindex="0"
        type="button"
      >
        Nein
        <span
          class="MuiTouchRipple-root emotion-9"
        />
      </button>
    </div>
    <div
      class="emotion-12 emotion-13"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render VotingClosed 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 16px;
}

.emotion-2 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-2 {
    font-size: 32px;
  }
}

.emotion-5 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-5.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-5:last-child {
  margin-bottom: 0;
}

.emotion-6 {
  display: grid;
  gap: 16px;
}

.emotion-8 {
  display: grid;
  gap: 4px;
}

.emotion-10 {
  display: grid;
  gap: 8px;
  grid-template-columns: 1fr max-content;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0 8px;
}

.emotion-12 {
  font-weight: 500;
}

.emotion-14 {
  font-weight: 500;
}

.emotion-16 {
  position: relative;
  font-size: 0.75em;
  padding: 4px 8px;
  position: relative;
  background-color: #eeeeee;
}

.emotion-18 {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background-color: #e0e0e0;
  z-index: 0;
  pointer-events: none;
  background-color: #e91e63;
  width: 52.38095238095239%;
}

.emotion-20 {
  position: relative;
  color: rgba(0, 0, 0, 0.87);
  color: #fff;
}

.emotion-32 {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background-color: #e0e0e0;
  z-index: 0;
  pointer-events: none;
  width: 47.61904761904761%;
}

.emotion-34 {
  position: relative;
  color: rgba(0, 0, 0, 0.87);
}

.emotion-36 {
  font-size: 0.875em;
  color: rgba(0, 0, 0, 0.38);
}

<article
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 emotion-2"
    >
      Question
    </h1>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-5"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Ja
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            52%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-18 emotion-19"
          />
          <div
            class="emotion-20 emotion-21"
          >
            11 Stimmen
          </div>
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Nein
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            48%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-32 emotion-19"
          />
          <div
            class="emotion-34 emotion-21"
          >
            10 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-36 emotion-37"
    >
      21 Stimmen – Abstimmung beendet.
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render VotingPlay 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -31,37 +31,77 @@
            </span>
          </p>
        </div>
      </div>
      <div
-       class="css-1e4oizq-PollBlockVoting ecm33wf2"
+       class="css-h8emd-PollBlockVoteResultList ecm33wf1"
      >
-       <button
-         class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-kctgaw-MuiButtonBase-root-MuiButton-root"
-         tabindex="0"
-         type="button"
+       <div
+         class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
+       >
+         <div
+           class="css-1cngs3v-PollBlockResultInfo e1v5g0xr5"
+         >
+           <div
+             class="css-115xnt3-PollBlockResultName e1v5g0xr4"
            >
              Ja
-         <span
-           class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           </div>
+           <div
+             class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
+           >
+             55%
+           </div>
+         </div>
+         <div
+           class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
+         >
+           <div
+             class="css-6pz6b3-PollBlockVoteBarFill e1v5g0xr1"
            />
-       </button>
-       <button
-         class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-kctgaw-MuiButtonBase-root-MuiButton-root"
-         tabindex="0"
-         type="button"
+           <div
+             class="css-1kbfvnx-PollBlockVoteBarText e1v5g0xr0"
+           >
+             12 Stimmen
+           </div>
+         </div>
+       </div>
+       <div
+         class="css-1gble97-PollBlockResultWrapper e1v5g0xr6"
+       >
+         <div
+           class="css-1cngs3v-PollBlockResultInfo e1v5g0xr5"
          >
+           <div
+             class="css-115xnt3-PollBlockResultName e1v5g0xr4"
+           >
              Nein
-         <span
-           class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           </div>
+           <div
+             class="css-qn23nf-PollBlockResultPercentage e1v5g0xr3"
+           >
+             45%
+           </div>
+         </div>
+         <div
+           class="css-56q0p9-PollBlockVoteBar e1v5g0xr2"
+         >
+           <div
+             class="css-1cibdzq-PollBlockVoteBarFill e1v5g0xr1"
            />
-       </button>
+           <div
+             class="css-q7kpoh-PollBlockVoteBarText e1v5g0xr0"
+           >
+             10 Stimmen
+           </div>
+         </div>
        </div>
+     </div>
      <div
        class="css-nh52ap-PollBlockMeta ecm33wf0"
      >
-       21 Stimmen – Schliesst am 
+       22 Stimmen – Schliesst am 
        <time
          datetime="2033-01-01"
        >
          01.01.2033 00:00
        </time>"
`;

exports[`Poll Block should render WihtoutPoll 1`] = `<DocumentFragment />`;

exports[`Poll Block should render WithClassName 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 16px;
}

.emotion-2 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-2 {
    font-size: 32px;
  }
}

.emotion-5 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-5.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-5:last-child {
  margin-bottom: 0;
}

.emotion-6 {
  display: grid;
  gap: 16px;
}

.emotion-8 {
  display: grid;
  gap: 4px;
}

.emotion-10 {
  display: grid;
  gap: 8px;
  grid-template-columns: 1fr max-content;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0 8px;
}

.emotion-12 {
  font-weight: 500;
}

.emotion-14 {
  font-weight: 500;
}

.emotion-16 {
  position: relative;
  font-size: 0.75em;
  padding: 4px 8px;
  position: relative;
  background-color: #eeeeee;
}

.emotion-18 {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background-color: #e0e0e0;
  z-index: 0;
  pointer-events: none;
  background-color: #e91e63;
  width: 52.38095238095239%;
}

.emotion-20 {
  position: relative;
  color: rgba(0, 0, 0, 0.87);
  color: #fff;
}

.emotion-32 {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background-color: #e0e0e0;
  z-index: 0;
  pointer-events: none;
  width: 47.61904761904761%;
}

.emotion-34 {
  position: relative;
  color: rgba(0, 0, 0, 0.87);
}

.emotion-36 {
  font-size: 0.875em;
  color: rgba(0, 0, 0, 0.38);
}

<article
    class="extra-classname emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 emotion-2"
    >
      Question
    </h1>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-5"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Ja
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            52%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-18 emotion-19"
          />
          <div
            class="emotion-20 emotion-21"
          >
            11 Stimmen
          </div>
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Nein
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            48%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-32 emotion-19"
          />
          <div
            class="emotion-34 emotion-21"
          >
            10 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-36 emotion-37"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render WithEmotion 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 16px;
}

.emotion-2 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-2 {
    font-size: 32px;
  }
}

.emotion-5 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-5.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-5:last-child {
  margin-bottom: 0;
}

.emotion-6 {
  display: grid;
  gap: 16px;
}

.emotion-8 {
  display: grid;
  gap: 4px;
}

.emotion-10 {
  display: grid;
  gap: 8px;
  grid-template-columns: 1fr max-content;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0 8px;
}

.emotion-12 {
  font-weight: 500;
}

.emotion-14 {
  font-weight: 500;
}

.emotion-16 {
  position: relative;
  font-size: 0.75em;
  padding: 4px 8px;
  position: relative;
  background-color: #eeeeee;
}

.emotion-18 {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background-color: #e0e0e0;
  z-index: 0;
  pointer-events: none;
  background-color: #e91e63;
  width: 52.38095238095239%;
}

.emotion-20 {
  position: relative;
  color: rgba(0, 0, 0, 0.87);
  color: #fff;
}

.emotion-32 {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background-color: #e0e0e0;
  z-index: 0;
  pointer-events: none;
  width: 47.61904761904761%;
}

.emotion-34 {
  position: relative;
  color: rgba(0, 0, 0, 0.87);
}

.emotion-36 {
  font-size: 0.875em;
  color: rgba(0, 0, 0, 0.38);
}

<article
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h4 emotion-2"
    >
      Question
    </h1>
    <div
      class="emotion-3 emotion-4"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-5"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Ja
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            52%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-18 emotion-19"
          />
          <div
            class="emotion-20 emotion-21"
          >
            11 Stimmen
          </div>
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <div
            class="emotion-12 emotion-13"
          >
            Nein
          </div>
          <div
            class="emotion-14 emotion-15"
          >
            48%
          </div>
        </div>
        <div
          class="emotion-16 emotion-17"
        >
          <div
            class="emotion-32 emotion-19"
          />
          <div
            class="emotion-34 emotion-21"
          >
            10 Stimmen
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-36 emotion-37"
    >
      21 Stimmen – Schliesst am 
      <time
        datetime="2033-01-01"
      >
        01.01.2033 00:00
      </time>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Poll Block should render WithError 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -31,10 +31,60 @@
            </span>
          </p>
        </div>
      </div>
      <div
+       class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorError MuiAlert-standardError MuiAlert-standard css-1iznk5b-MuiPaper-root-MuiAlert-root"
+       role="alert"
+     >
+       <div
+         class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
+       >
+         <svg
+           aria-hidden="true"
+           class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
+           data-testid="ErrorOutlineIcon"
+           focusable="false"
+           viewBox="0 0 24 24"
+         >
+           <path
+             d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
+           />
+         </svg>
+       </div>
+       <div
+         class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
+       >
+         Something went wrong with the user vote.
+       </div>
+     </div>
+     <div
+       class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorError MuiAlert-standardError MuiAlert-standard css-1iznk5b-MuiPaper-root-MuiAlert-root"
+       role="alert"
+     >
+       <div
+         class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
+       >
+         <svg
+           aria-hidden="true"
+           class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
+           data-testid="ErrorOutlineIcon"
+           focusable="false"
+           viewBox="0 0 24 24"
+         >
+           <path
+             d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
+           />
+         </svg>
+       </div>
+       <div
+         class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
+       >
+         Something went wrong with the poll vote.
+       </div>
+     </div>
+     <div
        class="css-1e4oizq-PollBlockVoting ecm33wf2"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-kctgaw-MuiButtonBase-root-MuiButton-root"
          tabindex="0""
`;
